// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AstMetadataInferer should expose metadata.json in parsable format 1`] = `
{
  "astNodeTypes": [
    "MemberExpression",
  ],
  "compat": {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/Document/querySelector",
    "source_file": "api/Document.json",
    "spec_url": "https://dom.spec.whatwg.org/#ref-for-dom-parentnode-queryselector①",
    "status": {
      "deprecated": false,
      "experimental": false,
      "standard_track": true,
    },
    "support": {
      "chrome": {
        "version_added": "1",
      },
      "chrome_android": {
        "version_added": "18",
      },
      "edge": {
        "version_added": "12",
      },
      "firefox": {
        "version_added": "3.5",
      },
      "firefox_android": {
        "version_added": "4",
      },
      "ie": [
        {
          "version_added": "9",
        },
        {
          "notes": "<code>querySelectorAll()</code> is supported, but only for CSS 2.1 selectors.",
          "partial_implementation": true,
          "version_added": "8",
        },
      ],
      "oculus": {
        "version_added": "5.0",
      },
      "opera": {
        "version_added": "10",
      },
      "opera_android": {
        "version_added": "10.1",
      },
      "safari": {
        "version_added": "3.1",
      },
      "safari_ios": {
        "version_added": "2",
      },
      "samsunginternet_android": {
        "version_added": "1.0",
      },
      "webview_android": {
        "version_added": "4.4",
      },
    },
  },
  "id": "document.querySelector",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "querySelector",
  "protoChain": [
    "document",
    "querySelector",
  ],
  "protoChainId": "document.querySelector",
}
`;

exports[`AstMetadataInferer should return basic output 1`] = `
{
  "astNodeTypes": [
    "NewExpression",
  ],
  "compat": {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "source_file": "api/AbortController.json",
    "spec_url": "https://dom.spec.whatwg.org/#interface-abortcontroller",
    "status": {
      "deprecated": false,
      "experimental": false,
      "standard_track": true,
    },
    "support": {
      "chrome": {
        "version_added": "66",
      },
      "chrome_android": {
        "version_added": "66",
      },
      "deno": {
        "version_added": "1.0",
      },
      "edge": {
        "version_added": "16",
      },
      "firefox": {
        "version_added": "57",
      },
      "firefox_android": {
        "version_added": "57",
      },
      "ie": {
        "version_added": false,
      },
      "nodejs": {
        "version_added": "15.0.0",
      },
      "oculus": {
        "version_added": "5.0",
      },
      "opera": {
        "version_added": "53",
      },
      "opera_android": {
        "version_added": "47",
      },
      "safari": [
        {
          "version_added": "12.1",
        },
        {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.1",
        },
      ],
      "safari_ios": [
        {
          "version_added": "12.2",
        },
        {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.3",
        },
      ],
      "samsunginternet_android": {
        "version_added": "9.0",
      },
      "webview_android": {
        "version_added": "66",
      },
    },
  },
  "id": "AbortController",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "AbortController",
  "protoChain": [
    "AbortController",
  ],
  "protoChainId": "AbortController",
}
`;

exports[`AstMetadataInferer should write to metadata.json correctly 1`] = `
{
  "astNodeTypes": [
    "NewExpression",
  ],
  "compat": {
    "mdn_url": "https://developer.mozilla.org/docs/Web/API/AbortController",
    "source_file": "api/AbortController.json",
    "spec_url": "https://dom.spec.whatwg.org/#interface-abortcontroller",
    "status": {
      "deprecated": false,
      "experimental": false,
      "standard_track": true,
    },
    "support": {
      "chrome": {
        "version_added": "66",
      },
      "chrome_android": {
        "version_added": "66",
      },
      "deno": {
        "version_added": "1.0",
      },
      "edge": {
        "version_added": "16",
      },
      "firefox": {
        "version_added": "57",
      },
      "firefox_android": {
        "version_added": "57",
      },
      "ie": {
        "version_added": false,
      },
      "nodejs": {
        "version_added": "15.0.0",
      },
      "oculus": {
        "version_added": "5.0",
      },
      "opera": {
        "version_added": "53",
      },
      "opera_android": {
        "version_added": "47",
      },
      "safari": [
        {
          "version_added": "12.1",
        },
        {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.1",
        },
      ],
      "safari_ios": [
        {
          "version_added": "12.2",
        },
        {
          "notes": "Even though <code>window.AbortController</code> is defined, it doesn't really abort <code>fetch</code> requests. See <a href='https://webkit.org/b/174980'>bug 174980</a>.",
          "partial_implementation": true,
          "version_added": "11.3",
        },
      ],
      "samsunginternet_android": {
        "version_added": "9.0",
      },
      "webview_android": {
        "version_added": "66",
      },
    },
  },
  "id": "AbortController",
  "isStatic": true,
  "kind": "web",
  "language": "js-api",
  "name": "AbortController",
  "protoChain": [
    "AbortController",
  ],
  "protoChainId": "AbortController",
}
`;
